# adk-mcp

./: .gitignore  pyproject.toml
adk_app/: agent.py
adk_app/.adk/: session.db
app/agent_service/: agent.py  mcp_client.py  runner.py  tools.py
app/api_gateway/: dependencies.py  main.py  routes.py  schemas.py
app/cache/: decorators.py  redis_client.py  utils.py
app/mcp_servers/document/: document_tools.py  pdf_parser.py  server.py
app/mcp_servers/storage/: auth.py  s3_tools.py  server.py
infra/: docker-compose.yml
shared/: config.py
shared/auth/: decorator.py  validator.py
