[project]
name = "adk-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "boto3>=1.43.30",
    "fastapi>=0.137.1",
    "google-adk>=2.2.0",
    "google-genai>=2.8.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-jose>=3.5.0",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
